--- a/Front.html
+++ b/Front.html
@@ -19,10 +19,14 @@
         <h2>Generate a Password</h2>
       </div>
       <div class="card-body">
-        <textarea readonly id="password" placeholder="Your Secure Password" aria-label="Generated Password"></textarea>
+        <textarea readonly id="password" placeholder="Your Secure Password" aria-label="Generated Password">
+          
+        </textarea>
       </div>
       <div class="card-footer">
-        <button id="generate" onclick="window.alert(makeid(8));" class="btn">Generate Password</button>
+
+        <button id="generate" class="btn">Generate Password</button>
+
       </div>
     </div>
   </div>
