Java, Css, Font Edits

--- a/Front.html
+++ b/Front.html
@@ -20,6 +20,21 @@
         <h2>Generate a Password</h2>
       </div>
 
+      <form class="checkBoxes">
+        
+          <label for="lowerBox">
+              <input type="checkbox" id="lowerBox"><span></span> Lowercase</label>
+          <br>
+          <label for="upperBox">
+              <input type="checkbox" id="upperBox"><span></span> Uppercase</label>
+          <br>
+          <label for="numbersBox">
+              <input type="checkbox" id="numbersBox"><span></span> Numbers</label>
+          <br>
+          <label for="symbolsBox">
+              <input type="checkbox" id="symbolsBox"><span></span> Symbols</label>
+      
+    </form>
 
       <div class="card-body">
         <textarea readonly id="password" placeholder="Your Secure Password" aria-label="Generated Password">
